--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
     </div>
 
-    <div class="spacer">
-        Test box to show functionality. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+    <div>
+        <p class="spacer">Test box to show functionality. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
         Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
         magnis dis parturient montes, nascetur ridiculus mus.
         Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
@@ -41,6 +41,7 @@
         Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus
         viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
         Etiam ult
+        </p>
     </div>
 
     <!-- <table class="borderTop">
