--- a/index.html
+++ b/index.html
@@ -5,42 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellefair&family=Covered+By+Your+Grace&family=Kalam:wght@300;700&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="style.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="style2.css" rel="stylesheet">
+    <title>Han Fashion</title>
 </head>
 <body>
-    <header>
+    <script src="script.js"></script>
+    <!-- <header>
         <h1><a href="index.html"> Official HAN</a></h1>
-    </header>
+    </header> -->
 
-    <div class="topnav" id="topnav">
-            <a href="shop.html"><button>SHOP</button></a>
-            <a href="contact.html"><button>CONTACT</button></a>
-            <div class="dropdown" id="dropdown">
-                <button class="drop3" onclick="dropdown3()">POLICY</button>
-                <div class="policy-content" id="policyContent">
-                    <a href="privacy.html">Privacy</a>
-                    <a href="refund.html">Refund</a>
-                    <a href="shipping.html">Shipping</a>
-                    <a href="tos.html">Terms of Service</a>
-                </div>
-            </div>
-    </div>
+    <nav class="topnav" id="topnav">
+        <ul class="menu">
+            <li class="icons"><a href="shop.html">shop.</a></li>
+            <li class="icons"><a href="contact.html">contact.</a></li>
+            <li><a href="#"><img src="./assets/logo2.png"></a></li>
+            <li class="icons"><a href="about.html">about us.</a></li>
+            <nav class="dropdown">
+                <button class="icons drop3" onclick="dropdown3()">policy.</button>
+                </br>
+                    <div class="policy-content" id="policyContent">
+                        <a href="privacy.html">PRIVACY.</a>
+                        </br>
+                        <a href="refund.html">REFUNDS.</a>
+                        </br>
+                        <a href="shipping.html">SHIPPING.</a>
+                        </br>
+                        <a href="tos.html">TERMS OF SERVICE.</a>
+                    </div>
+            </nav>
+        </ul>
+    </nav>
+
+</br>
 
     <div>
-        <p class="spacer">Test box to show functionality. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-        Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-        magnis dis parturient montes, nascetur ridiculus mus.
-        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-        Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec,
-        vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
-        justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
-        Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-        Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-        Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus
-        viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
-        Etiam ult
+        <p class="spacer">
         </p>
     </div>
 
@@ -58,6 +61,18 @@
             <td>Los Angeles based contemporary Asian street fashion.</td>
         </tr>
     </table> -->
+    <!-- Test box to show functionality. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+        Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
+        magnis dis parturient montes, nascetur ridiculus mus.
+        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+        Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec,
+        vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+        justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+        Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+        Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+        Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus
+        viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
+        Etiam ult -->
 
 <footer class="stickyFooter">
     <a href="https://www.facebook.com/official.hanism" target="_blank" class="fa fa-facebook"></a>
