added mobile compatability

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <nav class="topnav" id="topnav">
         <ul class="menu">
-            <li class="icons"><a href="shop.html">shop.</a></li>
-            <li class="icons"><a href="contact.html">contact.</a></li>
-            <li><a href="#"><img src="./assets/logo2.png"></a></li>
-            <li class="icons"><a href="about.html">about us.</a></li>
+            <li class="icons display"><a href="shop.html">shop.</a></li>
+            <li class="icons display"><a href="contact.html">contact.</a></li>
+            <li class="center"><a href="#"><img src="./assets/logo2.png"></a></li>
+            <li class="icons display"><a href="about.html">about us.</a></li>
             <nav class="dropdown">
-                <button class="icons drop3" onclick="dropdown3()">policy.</button>
+                <button class="icons drop3 display" onclick="dropdown3()">policy.</button>
                 </br>
                     <div class="policy-content" id="policyContent">
                         <a href="privacy.html">PRIVACY.</a>
